# direct-sqlite-iss67

./: .gitignore  LICENSE  README.md  direct-sqlite-iss67.cabal  sqlite-fts5.cabal  stack.yaml.320.fts5  stack.yaml.fts  stack.yaml.lts96  stack.yaml.system
app/: Main.hs
c/: main.c
src/: Lib.hs
